# OperatingSystems

./: README.md  ops  root
MatrixMultiplication/: CMakeLists.txt  file_processing.c  main.c  matrix_builder.c  methods.c  struct_builder.c
MatrixMultiplication/Headers/: file_processing.h  matrix_builder.h  methods.h  struct_builder.h
MatrixMultiplication/Resources/: logs.txt
MatrixMultiplication/test/: b.txt
Process_Sync/: CMakeLists.txt  caltrain-runner.c  caltrain.c  caltrain.h
Shell/: CMakeLists.txt  Makefile  README.md  Shell.cbp  command_parser.c  commands.c  environment.c  file_processing.c  history_handle.c  linux_shell.c  log_handle.c  shell  sllist.c  variables.c
Shell/Headers/: command_parser.h  commands.h  environment.h  file_processing.h  history_handle.h  log_handle.h  sllist.h  variables.h
Shell/Resources/: History.txt  README.txt  logs.txt
